<resources>
    <string name="app_name">Tin Whistle Tabs</string>
    <string name="dev_email">charles.grassin@gmail.com</string>

    <!-- List activity -->
    <string name="mainActivity_whistleKey_description">Required whistle key: %1$s</string>
    <string name="mainActivity_sheetTitlePlaceholder">Sheet title</string>
    <string name="mainActivity_sheetDetailsPlaceholder">Sheet details</string>
    <string name="mainActivity_no_results">No results…</string>
    <string name="mainActivity_sheetDetails_string">%1$s</string>
    <string name="favoriteToggle_description">Mark sheet as favourite</string>

    <!-- About dialog -->
    <string name="aboutDialog_title">About Tin Whistle Tabs</string>
    <string name="aboutDialog_message">Tin Whistle Tabs is a fork of <b>Irish Whistle Tabs</b>, created by <a href="http://www.charleslabs.fr"><b>Charles GRASSIN</b></a> under GPLv2 (free, open-source) licence.\n\nThis fork is maintained by <a href="https://github.com/gjambet/tinwhistletabs"><b>Guillaume Jambet</b></a>.\n\nBuilt with <b>Tin Whistle Tab font</b> © <a href="https://www.blaynechastain.com"><b>Blayne Chastain</b></a> and <a href="https://thesession.org"><b>The Session</b></a> ODbL.</string>
    <string name="aboutDialog_close">Close About dialog</string>

    <!-- Tempo dialog -->
    <string name="tempoDialog_title">Change tempo</string>
    <string name="tempoDialog_message">Enter new tempo modifier in percent (between %1$d and %2$d%%).</string>
    <string name="tempoDialog_editHint">Set tempo</string>
    <string name="tempoDialog_error">Invalid tempo (%1$s).</string>
    <string name="tempoDialog_error_min">Too slow! Changed to minimum value (%1$d%%).</string>
    <string name="tempoDialog_error_max">Too fast! Changed to maximum value (%1$d%%).</string>
    <string name="tempoDialog_checkbox">Add a %1$.1fs delay before playing (time to pick up whistle)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_set">Set</string>

    <!-- Key dialog -->
    <string name="keyDialog_title">Change whistle key</string>

    <!-- Sheet info dialog -->
    <string name="sheetInfoDialog_title">About this music…</string>
    <string name="sheetInfoDialog_ok">OK</string>
    <string name="sheetInfoDialog_sheet_title">&lt;b&gt;Title&lt;/b&gt;: %1$s</string>
    <string name="sheetInfoDialog_sheet_author">&lt;br&gt;&lt;b&gt;Author&lt;/b&gt;: %1$s</string>
    <string name="sheetInfoDialog_sheet_type">&lt;br&gt;&lt;b&gt;Type&lt;/b&gt;: %1$s</string>
    <string name="sheetInfoDialog_sheet_sheetAuthor">&lt;br&gt;&lt;b>Sheet author&lt;/b&gt;: %1$s</string>
    <string name="sheetInfoDialog_sheet_license">&lt;br&gt;&lt;b>Sheet license&lt;/b&gt;: %1$s</string>

    <!-- Tab activity -->
    <string name="TabActivity_playPause">Play/Pause</string>
    <string name="TabActivity_stop">Stop</string>
    <string name="TabActivity_more">Score</string>

    <!-- Sheet activity -->
    <string name="sheetActivity_title">Score: %1$s</string>

    <!-- Menus -->
    <string name="menu_about">About</string>
    <string name="menu_search_by_title">Search by title</string>
    <string name="menu_tempo">Tempo</string>
    <string name="menu_key">Key</string>
    <string name="mainActivity_request_a_tune">Request a tune…</string>

    <!-- Error messages -->
    <string name="error_contact">Could not send mail: %1$s</string>
    <string name="error_tune_generation">Media playback disabled: %1$s</string>
</resources>
