<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <CheckBox
        android:id="@+id/mainActivity_favoriteToggle"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:button="@android:drawable/btn_star"
        android:contentDescription="@string/favoriteToggle_description"
        android:focusable="false"
        android:gravity="center" />

    <ImageView
        android:id="@+id/mainActivity_sheetPicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/mainActivity_sheetPicturePlaceholder"
        tools:background="#AAA" />

    <TextView
        android:id="@+id/mainActivity_SheetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/mainActivity_sheetPicture"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/mainActivity_sheetPicture"
        android:layout_toStartOf="@id/mainActivity_favoriteToggle"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:text="@string/mainActivity_sheetTitlePlaceholder" />

    <TextView
        android:id="@+id/mainActivity_SheetDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/mainActivity_SheetName"
        android:layout_below="@id/mainActivity_SheetName"
        android:layout_toStartOf="@id/mainActivity_favoriteToggle"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@android:color/darker_gray"
        tools:text="@string/mainActivity_sheetDetailsPlaceholder" />
</RelativeLayout>
