<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="20dp"
    android:paddingEnd="16dp"
    android:paddingBottom="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/aboutDialog_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/logo" />

        <ImageButton
            android:id="@+id/aboutDialog_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/aboutDialog_close"
            android:padding="8dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/aboutDialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/aboutDialog_logo"
            android:layout_toStartOf="@id/aboutDialog_close"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/aboutDialog_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/aboutDialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="2dp"
        android:linksClickable="true"
        android:text="@string/aboutDialog_message"
        android:textColor="@android:color/black"
        android:textColorLink="@color/colorAccent"
        android:textSize="18sp" />
</LinearLayout>
